--- a/src/assets/scss/utility/__utility.scss
+++ b/src/assets/scss/utility/__utility.scss
@@ -5,9 +5,14 @@
 @import "aspect-ratio";
 @import "break";
 @import "colors";
+@import "columns";
 @import "easing-gradient";
 @import "elevate";
+@import "responsive-font-size";
+@import "visually-hidden";
 
 @import "hardware";
 @import "fluid-property";
 @import "remove-text-gap";
+
+@import "button-color";
