--- a/src/assets/scss/abstracts/_typography.scss
+++ b/src/assets/scss/abstracts/_typography.scss
@@ -7,6 +7,7 @@ $fs-document:   16px;
 // Font sizes relative to root
 $fs-small:      0.875rem;
 $fs-base:       1rem;
+$fs-text:       1.125rem;
 $fs-medium:     1.25rem;
 $fs-large:      1.375rem;
 $fs-x-large:    2rem;
