--- a/src/components/core/button/button.module.scss
+++ b/src/components/core/button/button.module.scss
@@ -1,23 +1,15 @@
 @import './../../../assets/scss/utility';
 
 .Button {
-  -webkit-appearance: none;
-  border-radius: $border-radius;
-  border: 0;
-  background: transparent
-    linear-gradient(105deg, var(--text-color) 0%, #260F64 100%)
-    0% 0% no-repeat;
-  background-size: 200% 100%;
-  color: var(--bg-color);
-  cursor: pointer;
-  display: inline-block;
+  @include ButtonReset($border-radius);
+  @include ButtonColor($color-button-bg, $color-button-text);
   font-weight: $fw-medium;
-  font-size: $fs-medium;
+  font-size: $fs-base;
   line-height: 1;
   padding: 1em $spacing-large;
-  transition: background-position-x 0.4s ease-out;
+  transition: background 0.15s ease-out;
 
-  &:hover, &:focus {
-    background-position-x: 100%;
+  &.danger {
+    @include ButtonColor($color-danger-button-bg, $color-danger-button-text);
   }
 }
