--- a/src/components/core/tooltip/tooltip.module.scss
+++ b/src/components/core/tooltip/tooltip.module.scss
@@ -1,7 +1,7 @@
 @import './../../../assets/scss/utility';
 
 .Tooltip {
-  background: $color-text;
+  background: $color-grey-700;
   border-radius: $border-radius / 2;
   color: $color-base;
   font-size: $fs-small;
