--- a/src/components/recipes/recipe/recipe.module.scss
+++ b/src/components/recipes/recipe/recipe.module.scss
@@ -1,10 +1,21 @@
 @import './../../../assets/scss/utility';
 
 .Wrap {
+  max-width: 320px;
   position: relative;
+  transition: 0.2s ease;
+  transition-property: transform, color;
 
   &.placeholder {
     color: var(--soft-color);
+
+    &:hover {
+      color: var(--text-color);
+    }
+  }
+
+  &:not(.placeholder):hover {
+    transform: translateY(-2px);
   }
 }
 
@@ -34,7 +45,7 @@
   padding-top: 4px;
   height: 0;
   overflow: hidden;
-  padding-bottom: 100% / 3 * 2;
+  padding-bottom: 100% * 1.175;
   position: relative;
   width: 100%;
 
@@ -52,13 +63,81 @@
 
   .placeholder & {
     background: transparent;
-    border: 2px dashed var(--border-color);
+    border: 2px dashed;
+    color: inherit;
+    opacity: 0.25;
     padding-top: 0;
+
+    &::after {
+      content: none;
+    }
+  }
+
+  img {
+    height: 100%;
+    left: 0;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    transition: 2s ease transform;
+    width: 100%;
+    will-change: transform;
+
+    .Wrap:hover & {
+      transform: scale(1.2);
+    }
+  }
+}
+
+.Info {
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row wrap;
+  z-index: 1;
+}
+
+.Time {
+  margin: 0;
+}
+
+.Title {
+  bottom: 0;
+  color: $color-base;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  left: 0;
+  padding: $spacing-large;
+  position: absolute;
+  right: 0;
+  top: 0;
+
+  .placeholder & {
+    color: inherit;
+
+    * {
+      font-weight: $fw-normal;
+    }
+  }
+}
+
+.Link {
+  flex: 0 0 100%;
+
+  .placeholder & {
+    padding-top: $spacing-large;
+  }
+
+  .placeholderIcon {
+    display: block;
+    height: 2em;
+    margin: 0 auto $spacing-medium;
+    position: relative;
+    width: 2em;
 
     &::before, &::after {
       background: transparent;
       border-bottom: 3px solid;
-      color: var(--soft-color);
       bottom: auto;
       content: '';
       left: 50%;
@@ -77,25 +156,4 @@
       transform: translate(-50%, -50%);
     }
   }
-}
-
-.Info {
-  bottom: 0;
-  display: flex;
-  justify-content: space-between;
-  left: 0;
-  padding: $spacing-base;
-  position: absolute;
-  right: 0;
-  z-index: 1;
-}
-
-.Time {
-  margin: 0;
-}
-
-.Title {
-  margin-top: $spacing-base;
-  padding: 0 $spacing-large;
-  text-align: center;
 }
