--- a/src/assets/scss/utility/_button-color.scss
+++ b/src/assets/scss/utility/_button-color.scss
@@ -1,11 +1,14 @@
 @mixin ButtonReset($border-radius: 0) {
   -webkit-appearance: none;
+  background: transparent;
   border: 0;
   border-radius: $border-radius;
+  color: inherit;
   cursor: pointer;
   display: inline-block;
   font: inherit;
   user-select: none;
+  text-decoration: none;
 }
 
 @mixin ButtonColor($background-color, $color) {
@@ -29,5 +32,9 @@
     &:active {
       background: darken($background-color, 8%);
     }
+  }
+
+  &:focus {
+    box-shadow: 0 0 0 2px rgba($background-color, 0.5);
   }
 }
