--- a/src/components/calendar/view/calendar.module.scss
+++ b/src/components/calendar/view/calendar.module.scss
@@ -16,6 +16,7 @@
   flex-direction: column;
   flex: 0 0 100%;
   height: 100%;
+  max-width: 100%;
   padding-top: $spacing-x-small;
   transition: 0.4s cubic-bezier(0.77, 0, 0.175, 1);
   will-change: opacity, transform, visibility;
