--- a/src/components/core/forms/input/input.module.scss
+++ b/src/components/core/forms/input/input.module.scss
@@ -4,12 +4,12 @@
   -webkit-appearance: none;
   background: $color-input-bg;
   border: 0;
-  border-radius: 0;
+  border-radius: $border-radius;
   font: inherit;
   font-size: $fs-text;
   font-weight: $fw-medium;
   outline: 0;
-  padding: 0.58em 0.75em;
+  padding: 0.58rem 0.75rem;
   transition: background 0.15s ease;
   width: 100%;
 
@@ -22,6 +22,6 @@
   }
 
   &.large {
-    font-size: $fs-large;
+    @include font-size($fs-large);
   }
 }
