--- a/src/assets/scss/utility/_button-color.scss
+++ b/src/assets/scss/utility/_button-color.scss
@@ -7,6 +7,7 @@
   cursor: pointer;
   display: inline-block;
   font: inherit;
+  outline: 0;
   user-select: none;
   text-decoration: none;
 }
@@ -35,6 +36,7 @@
   }
 
   &:focus {
-    box-shadow: 0 0 0 2px rgba($background-color, 0.5);
+    box-shadow: 0 0 0 1px darken($background-color, 10%),
+      0 0 0 3px rgba(darken($background-color, 20%), 0.5);
   }
 }
