--- a/src/components/core/forms/button/button.module.scss
+++ b/src/components/core/forms/button/button.module.scss
@@ -7,9 +7,23 @@
   font-size: $fs-base;
   line-height: 1;
   padding: 1em $spacing-large;
-  transition: background 0.15s ease-out;
+  transition: background 0.15s ease-out, box-shadow 0.15s ease-out;
+  will-change: background, box-shadow;
 
   &.danger {
     @include ButtonColor($color-danger-button-bg, $color-danger-button-text);
+  }
+
+  &.link {
+    all: initial;
+    color: $color-success;
+    cursor: pointer;
+    font: inherit;
+    font-weight: $fw-medium;
+    transition: color 0.15s ease-out;
+
+    &:hover {
+      color: $color-button-text;
+    }
   }
 }
