Add account settings interaction

--- a/src/assets/scss/base/_custom-properties.scss
+++ b/src/assets/scss/base/_custom-properties.scss
@@ -4,9 +4,10 @@
   --color-text: #{$color-button-text};
 
   --bg-color: #{$color-base};
-  --bg-soft-color: #F7F8FA;
+  --bg-soft-color: #f7f8fa;
   --text-color: #{$color-text};
   --soft-color: #{$color-soft};
   --success-color: #{$color-success};
   --border-color: #{$color-border};
+  --danger-color: #{$color-danger};
 }
