--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-  background: var(--bg-color);
+  background: var(--bg-soft-color);
   color: var(--text-color);
   font: 400 normal 1rem / #{$lh-base} $ff-text;
 }
