--- a/src/components/core/forms/form/form.module.scss
+++ b/src/components/core/forms/form/form.module.scss
@@ -37,6 +37,12 @@ $margin: $spacing-base;
     align-self: flex-start;
     flex: 0 0 auto;
   }
+
+  &:last-child:not(:only-child) {
+    button, a {
+      margin-left: auto;
+    }
+  }
 }
 
 .Label {
