--- a/src/assets/scss/layout/_main-content.scss
+++ b/src/assets/scss/layout/_main-content.scss
@@ -1,6 +1,6 @@
 .wrap {
   display: flex;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 %padding-container {
@@ -9,8 +9,11 @@
 
 .sidebar {
   @extend %padding-container;
+  background: var(--bg-color);
   flex: 0 0 30%;
-  height: 100%;
+  height: 100vh;
+  position: sticky;
+  top: 0;
 
   @include break(hd) {
     flex: 0 0 columns(5);
@@ -19,7 +22,6 @@
 
 .content {
   @extend %padding-container;
-  background: var(--bg-soft-color);
   flex: 1;
 
   @include break(hd) {
