--- a/src/assets/scss/utility/__utility.scss
+++ b/src/assets/scss/utility/__utility.scss
@@ -6,6 +6,7 @@
 @import "break";
 @import "colors";
 @import "columns";
+@import "focus-outline";
 @import "easing-gradient";
 @import "elevate";
 @import "responsive-font-size";
