--- a/src/components/core/tag/tag.module.scss
+++ b/src/components/core/tag/tag.module.scss
@@ -1,5 +1,11 @@
 @import './../../../assets/scss/utility';
 
+.Wrap {
+  &:not(:last-of-type) {
+    margin-right: 0.625rem;
+  }
+}
+
 .Input {
   @include visually-hidden;
 }
@@ -10,7 +16,7 @@
   font-weight: $fw-normal;
   font-size: $fs-base;
   line-height: 1;
-  padding: 0.65em 2em;
+  padding: 0.75em 2em;
   transition: background 0.15s ease-out;
   text-align: center;
 
