--- a/src/components/recipes/view/recipes.module.scss
+++ b/src/components/recipes/view/recipes.module.scss
@@ -1,7 +1,38 @@
 @import './../../../assets/scss/utility';
 
-.Wrap {
-  h2 {
-    margin-bottom: calc(#{$spacing-large} + 0.5vh);
+.Tabs {
+  border-bottom: 1px solid $color-border;
+  margin: 0 columns(-1);
+  padding: 0 columns(1) 1.5rem;
+}
+
+.TabButton {
+  color: $color-text;
+  @include font-size($fs-large);
+  text-decoration: none;
+  transition: 0.15s ease color;
+
+  & + & {
+    margin-left: 1em;
   }
+
+  &:hover {
+    color: $color-headlines;
+  }
+
+  &.active {
+    color: $color-headlines;
+    font-weight: $fw-medium;
+  }
+}
+
+.Controls {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  margin: 1.5rem 0 2.25rem;
+}
+
+.Filters {
+  display: flex;
 }
