--- a/src/assets/scss/layout/_main-content.scss
+++ b/src/assets/scss/layout/_main-content.scss
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: column;
   flex: 0 0 30%;
-  max-width: 30rem;
+  max-width: 27.5rem;
   height: 100vh;
   position: sticky;
   top: 0;
@@ -28,6 +28,8 @@
 .content {
   @extend %padding-container;
   flex: 1;
+
+  --bg-color: $color-base-soft;
 
   @include break(hd) {
     padding-left: columns(1);
