Improve custom properties naming and fix join color

--- a/src/assets/scss/base/_custom-properties.scss
+++ b/src/assets/scss/base/_custom-properties.scss
@@ -1,7 +1,7 @@
 :root {
   // reusable colors for color-coded components
   --color: #{$color-button-bg};
-  --color-text: #{$color-button-text};
+  --color-inv: #{$color-button-text};
 
   --bg-color: #{$color-base};
   --bg-soft-color: #f7f8fa;
