--- a/src/components/user/icons/single-icon/single-icon.module.scss
+++ b/src/components/user/icons/single-icon/single-icon.module.scss
@@ -14,7 +14,7 @@ $border-width: 2px;
   background: var(--color);
   border-radius: 50%;
   border: $border-width solid var(--bg-color);
-  color: var(--color-text);
+  color: var(--color-inv);
   display: flex;
   align-items: center;
   justify-content: center;
