--- a/src/components/core/forms/checkbox/checkbox.module.scss
+++ b/src/components/core/forms/checkbox/checkbox.module.scss
@@ -2,7 +2,7 @@
 
 .Wrap {
   // --color: var(--success-color);
-  color: var(--text-color);
+  color: var(--color, #{$color-text});
   user-select: none;
 }
 
