--- a/src/components/recipes/teaser/teaser.module.scss
+++ b/src/components/recipes/teaser/teaser.module.scss
@@ -87,7 +87,7 @@
   flex-direction: column;
   justify-content: flex-end;
   left: 0;
-  padding: $spacing-large;
+  padding: 1.25em $spacing-large;
   position: absolute;
   right: 0;
   top: 0;
