--- a/src/components/core/icon-checkbox/icon-checkbox.module.scss
+++ b/src/components/core/icon-checkbox/icon-checkbox.module.scss
@@ -9,36 +9,39 @@
 }
 
 .IconCheckbox {
+  align-items: center;
   background: transparent;
   border-radius: 1em;
   border: 1px solid;
+  color: var(--color, #{$color-text});
   cursor: pointer;
+  display: flex;
   flex: 0 0 1.5em;
   height: 1.5em;
-  margin-right: 1em;
+  justify-content: center;
+  margin-right: 0.5em;
   margin-top: -0.125em;
   position: relative;
   transition: 0.2s ease;
   width: 1.5em;
 
-  &::before {
-    border-bottom: 1px solid;
-    border-right: 1px solid;
-    content: '';
-    font-size: 0.625em;
-    height: 1em;
-    left: 50%;
-    position: absolute;
-    top: 50%;
-    transform: translate(-50%, -60%) rotate(45deg);
-    width: 0.625em;
-  }
-
   :checked + .Label & {
-    background: var(--success-color);
-    border-color: var(--success-color);
-    color: var(--bg-color);
+    background: var(--color);
+    border-color: var(--color);
+    color: var(--color-inv);
+
+    .checkmark & {
+      background: var(--success-color);
+      border-color: var(--success-color);
+      color: var(--bg-color);
+    }
   }
+}
+
+.Icon {
+  height: 0.75em;
+  position: absolute;
+  width: 0.75em;
 }
 
 .Label {
