--- a/src/components/core/icon/icon.module.scss
+++ b/src/components/core/icon/icon.module.scss
@@ -1,7 +1,9 @@
 .Icon {
+  align-items: center;
   align-self: center;
-  display: inline-block;
+  display: inline-flex;
   font-size: 1em;
+  justify-content: center;
   height: 1em;
   width: 1em;
 
