--- a/src/components/user/icons/group/group.module.scss
+++ b/src/components/user/icons/group/group.module.scss
@@ -1,10 +1,14 @@
 @import './../../../../assets/scss/utility';
 
-.List {
+.Wrap {
   display: flex;
+}
+
+.List {
+  display: inline-flex;
   list-style: none;
   flex-flow: row-reverse;
-  margin: 0;
+  margin: 0 0.5em 0 0;
   padding: 0;
 }
 
