--- a/src/components/core/forms/button/button.module.scss
+++ b/src/components/core/forms/button/button.module.scss
@@ -7,6 +7,7 @@
   font-size: $fs-base;
   line-height: 1;
   padding: 1em $spacing-large;
+  text-decoration: none;
   transition: background 0.15s ease-out, box-shadow 0.15s ease-out;
   will-change: background, box-shadow;
 
