Add back to overview link to sub routes

--- a/src/assets/scss/abstracts/__abstracts.scss
+++ b/src/assets/scss/abstracts/__abstracts.scss
@@ -1,7 +1,7 @@
 @import "colors";
 @import "env";
+@import "font";
 @import "layout";
 @import "style";
 @import "transitions";
-@import "typography";
 @import "z-index";
