--- a/src/components/core/tooltip/tooltip.module.scss
+++ b/src/components/core/tooltip/tooltip.module.scss
@@ -14,6 +14,7 @@
   top: 100%;
   transform: translateX(-50%);
   visibility: hidden;
+  z-index: 110;
 
   :hover > &, :focus > & {
     opacity: 1;
