--- a/src/assets/scss/layout/_card.scss
+++ b/src/assets/scss/layout/_card.scss
@@ -1,9 +1,13 @@
 .card {
   background: $color-base;
   border-radius: $border-radius;
-  margin: 0 0 1.25rem;
   padding: 3rem 6rem 3rem 4rem;
   position: relative;
+
+
+  & + & {
+    margin-top: 1.25rem;
+  }
 
   p:not([class]) {
     color: $color-soft;
@@ -28,7 +32,7 @@
     overflow: hidden;
     position: static;
 
-    :last-child {
+    > :last-child {
       margin-bottom: 1.5rem;
     }
 
