--- a/src/views/recipe/recipe.module.scss
+++ b/src/views/recipe/recipe.module.scss
@@ -52,6 +52,42 @@
       margin: 0 0 0.875rem;
     }
   }
+
+  &Header {
+    &Wrap {
+      display: flex;
+      justify-content: space-between;
+      padding-right: 2rem;
+
+      & > *:not(:last-child) {
+        margin-bottom: 0;
+      }
+    }
+  }
+}
+
+.Duplicate {
+  @include ButtonReset;
+  align-items: center;
+  color: var(--soft-color);
+  display: flex;
+  transition: color 0.15s ease;
+
+  &:hover {
+    color: var(--text-color);
+  }
+
+  &Icon {
+    border: 1px solid;
+    border-radius: 50%;
+    box-sizing: content-box;
+    padding: 0.125em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 1.25em;
+    width: 1.25em;
+  }
 }
 
 .Preparation {
