Generate recipe tabs from user groups

--- a/src/components/recipes/view/recipes.module.scss
+++ b/src/components/recipes/view/recipes.module.scss
@@ -13,6 +13,7 @@
   line-height: $lh-small;
   text-decoration: none;
   transition: 0.15s ease color;
+  text-transform: capitalize;
 
   & + & {
     margin-left: 1em;
