Get members (users and groups) for recipe

--- a/src/components/user/icons/single-icon/single-icon.module.scss
+++ b/src/components/user/icons/single-icon/single-icon.module.scss
@@ -23,4 +23,8 @@ $border-width: 2px;
   justify-content: center;
   margin-top: -$border-width;
   width: 100%;
+
+  .isGroup & {
+    border-radius: 25%;
+  }
 }
